@@ -1,3 +1,8 @@
+2009-08-12  Lucas Rocha  <lucasr@gnome.org>
+
+	* src/dh-assistant-view.c: Patch from Matthew Barnes to
+	fix bug #588655, Work around deprecated g_mapped_file_free().
+
 2009-02-19  Richard Hult  <richard@imendio.com>
 
 	* src/dh-window.c: (dh_window_init): Patch from Luca Ferretti to
